--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=80
-spring.datasource.url=jdbc:postgresql://localhost:5432/click_up_real_project
+spring.datasource.url=jdbc:postgresql://localhost:5432/clickup
 spring.datasource.username=postgres
-spring.datasource.password=2002
+spring.datasource.password=942998501
 
 spring.jpa.open-in-view=true
 
